--- a/styles/styles.css
+++ b/styles/styles.css
@@ -290,12 +290,28 @@ h2 {
   color: var(--text-muted);
   font-size: 20px;
   padding: 0;
-  margin: 0 0 25px 0;
+  margin: 0 0 10px 0;
   line-height: 1.4;
 }
 
 @media (min-width: 992px) {
   h2 {
+    max-width: 350px;
+  }
+}
+
+#userLocation {
+  font-weight: 300;
+  color: var(--text-muted);
+  font-size: 16px;
+  padding: 0;
+  margin: 0 0 25px 0;
+  line-height: 1.4;
+  opacity: 0.8;
+}
+
+@media (min-width: 992px) {
+  #userLocation {
     max-width: 350px;
   }
 }
